[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/tiles.png" type="Texture" id=1]
[ext_resource path="res://Oar.gd" type="Script" id=2]
[ext_resource path="res://BladeSplash.tscn" type="PackedScene" id=3]

[node name="OarBB" type="Node2D"]
rotation = -1.5708
script = ExtResource( 2 )

[node name="BladeSplash" parent="." instance=ExtResource( 3 )]
visible = false
modulate = Color( 1, 1, 1, 1 )
show_behind_parent = true
position = Vector2( 31.1254, -1.71347 )
rotation = -3.14159
scale = Vector2( 0.60422, 0.987875 )
offset = Vector2( -30.2106, -19.2825 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 1.43769, -23.3004 )
rotation = -3.14159
scale = Vector2( 1.00331, 0.873179 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -38, -29.5 )
region_enabled = true
region_rect = Rect2( 463.284, 593.639, 55.1873, 8.41608 )

[node name="SpriteInWater" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 1.43769, -23.3004 )
rotation = -3.14159
scale = Vector2( 1.00331, 0.873179 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -38, -29 )
region_enabled = true
region_rect = Rect2( 463.55, 605.135, 54.5388, 5.63245 )

[node name="WavePosition" type="Position2D" parent="."]
position = Vector2( 39, -3.99986 )

[node name="WavePositionStrijken" type="Position2D" parent="."]
position = Vector2( 31, 5.00011 )
